--- a/languages/c/c.org
+++ b/languages/c/c.org
@@ -1,3 +1,4 @@
+- asan, ubsan, valgrind, fuzzers, libcheck, pvs
 - http://infolab.stanford.edu/~ullman/focs.html#pdfs
 - Book: http://c-faq.com/
 - C Books Reviews http://knking.com/recbooks/c.html
