--- a/languages/ml/fsharp.org
+++ b/languages/ml/fsharp.org
@@ -1,8 +1,48 @@
 https://blog.darklang.com/new-backend-fsharp/
 https://bartoszsypytkowski.com/tag/fsharp/
 https://bartoszsypytkowski.com/writing-high-performance-f-code/
+https://fsharp.org/use/linux/
 - Tool: Fsharp to ASM/C# https://sharplab.io/
 - Book: https://zaid-ajaj.github.io/the-elmish-book/#/
 - Raytracer:
   https://github.com/bmitc/the-ray-tracer-challenge-fsharp
 - JS https://fable.io/
+- Microsoft Research https://www.youtube.com/user/MicrosoftResearch/videos
+- Microsoft Developer https://www.youtube.com/c/MicrosoftDeveloper/videos
+- Mid-2000s Throwback https://www.youtube.com/channel/UCELigndXajlVr6VoZEdOO2A/videos
+- https://h3tech.dev/post/wtfsharp-is-next/
+- c# vs c++ https://news.ycombinator.com/item?id=4444904
+- dotnet 6 performance https://devblogs.microsoft.com/dotnet/performance-improvements-in-net-6/
+- Editor: Ionide extension for CODE
+- Fix snap syslink
+  #+begin_src
+  # cd /snap/bin
+  # mv dotnet dotnet.bin
+  # ln -s /snap/dotnet-sdk/current/dotnet .
+  #+end_src
+- https://dotnet.microsoft.com/en-us/learn/fsharp
+- Documentation https://docs.microsoft.com/en-us/dotnet/fsharp/?WT.mc_id=dotnet-35129-website
+- https://dotnet.microsoft.com/en-us/learn/languages/fsharp-hello-world-tutorial/create
+  $ dotnet --list-sdks
+  $ dotnet new console -lang F# -o MyFsharpApp
+  $ cd MyFsharpApp/
+  $ dotnet run
+- Courses: https://github.com/dcook-net/FSharpLearningResources
+- https://github.com/pavsaund/awesome-learning-fsharp
+- https://github.com/fsprojects/awesome-fsharp
+- Learning resources https://fsharpforfunandprofit.com/
+* Video
+- Austin 2019 https://usergroup.tv/videos/category/group/austin-f-meetup/
+- Channel: Community F# https://vimeo.com/channels/c4fsharp/videos
+- Channel: Community F# https://www.youtube.com/c/C4fsharpNet/videos
+- Channel: F# Online https://www.youtube.com/channel/UC1SQsRYPRV0Kw3KCowGJXzA
+- Video: Stop worrying https://www.youtube.com/watch?v=XuY8Qttvqys&t=235s
+- Video: F# for the Masses - with Ian Russell https://www.youtube.com/watch?v=MSM16DfU7Lo
+- Video: Tutorial - F# for beginners
+  https://www.youtube.com/watch?v=yGzu0iDuMNQ&list=PLdo4fOcmZ0oUFghYOp89baYFBTGxUkC7Z
+- Course: Norway University - Functional Programming in F#
+  https://www.youtube.com/playlist?list=PLiLMQyqbPyEMTGBoJ0Y1lG2SRv525dqq8
+  Slides https://github.com/juselius/inf-3910-5
+* Libraries
+- F# -> Javascript https://github.com/fable-compiler/Fable
+- ELM like abstraction https://github.com/elmish/elmish
